update: 16. 향상된 서버 만들기

--- a/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
+++ b/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
@@ -65,14 +65,39 @@ private void clearBuffer(ByteBuffer buffer) {
 
 # 03. 비효율적인 데이터 전송에 대한 고려
 
-
-
-
 # 04. 동시성을 이용한 성능 극대화
+
+- 단일 스레드를 이용하는 것 보다 멀티 스레드를 이용하는 것이 동시 접속자를 처리하기에 효율적이다.
+- 어떻게 스레드를 활용하는지 보자.
+
+## 1. Accept, Process 의 분리
+
+```java
+SelectionKey key = (SelectionKey) it.next();
+if (key.isAcceptable()) {
+	// 서버 소켓채널에 클라이언트가 접속을 시도한 경우
+	accept(key);
+} else if (key.isReadable()) {
+	// 이미 연결된 클라이언트가 메시지를 보낸 경우
+	read(key);
+}
+```
+
+- 위 코드는 매번 클라이언트가 접속한 것인지 또는 클라이언트가 메시지를 보낸 것인지를 판단해서 처리하고 있다.
+- 어떤 요청인지 검사하는 것도 성능에 나쁜 영향을 주는 요인이지만 `accept()` 메소드로 클라이언트와 접속을 맺는 것도 상당히 느린 작업이다.
+
+- 따라서 Accept 에 해당하는 부분은 별도의 스레드와 셀렉터로 분리시켜서 클라이언트의 접속을 전담하게 만드는 것이 필요하다.
+- 필요하다면 나머지 이벤트(Connect, Read, Write)도 각각의 별도 처리 로직으로 분리하는 것이 대용량 서버에서는 유리하다.
+
+
+
+
 
 
 
 # 05. 향상된 서버 만들기
+
+
 
 
 
