update: 16. 향상된 서버 만들기

--- a/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
+++ b/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
@@ -89,6 +89,20 @@ if (key.isAcceptable()) {
 - 따라서 Accept 에 해당하는 부분은 별도의 스레드와 셀렉터로 분리시켜서 클라이언트의 접속을 전담하게 만드는 것이 필요하다.
 - 필요하다면 나머지 이벤트(Connect, Read, Write)도 각각의 별도 처리 로직으로 분리하는 것이 대용량 서버에서는 유리하다.
 
+## 2. SelectorPool 사용
+
+- 만 명 정도의 동시접속자가 항상 유지될 정도로 사용자의 접속, 해제가 빈번한 서버를 개발해야 한다고 생각해보자.
+- Accept 부분을 별도의 셀렉터로 분리해도 접속 자체가 워낙 빈번하면 Accept 부분에서 병목이 일어날 것이다.
+
+- 이런 경우에는 Accpet 를 수행하는 셀렉터를 n개로 만들어서 사용하는 것이 효과적이다.
+
+- Read 를 수행하는 셀럭터가 단 하나뿐인데, 동시접속자가 훨씬 많다면 관리할 채널이 너무 많기 때문에 셀렉터 효율이 떨어질 것이다.
+
+- 따라서 이 부분도 Read 를 수행하는 셀렉터를 n개로 만들어서 사용하는 것이 효과적이다.
+
+> [!note]
+> 이렇게 병목부분이 될 수 있는 부분인 셀렉터에 대해 그 사용 빈도나 관리 채널의 개수에 따라 일정한 한도 안에서 자동적으로 셀렉터의 개수가 늘어나거나 줄어들도록 SelectorPool 을 만들어 사용하면 서버의 성능 향상에 많은 도움이 될 것이다.
+
 
 
 
