update: 16. 향상된 서버 만들기

--- a/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
+++ b/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
@@ -103,11 +103,62 @@ if (key.isAcceptable()) {
 > [!note]
 > 이렇게 병목부분이 될 수 있는 부분인 셀렉터에 대해 그 사용 빈도나 관리 채널의 개수에 따라 일정한 한도 안에서 자동적으로 셀렉터의 개수가 늘어나거나 줄어들도록 SelectorPool 을 만들어 사용하면 서버의 성능 향상에 많은 도움이 될 것이다.
 
+## 3. ThreadPool 사용
 
+```java
+private void accept(SelectionKey key) {
+	ServerSocketChannel server = (ServerSocketChannel) key.channel();
+	SocketChannel sc;
+	try {
+		// 서버소켓채널의 accept() 메소드로 서버소켓을 생성한다.
+		sc = server.accept();
+		// 생성된 소켓채널을 비블록킹과 읽기 모드로 셀렉터에 등록한다.
+		registerChannel(selector, sc, SelectionKey.OP_READ);
+		info(sc.toString() + " 클라이언트가 접속했습니다.");
+	} catch (ClosedChannelException e) {
+		log(Level.WARNING, "SimpleChatServer.accept()", e);
+	} catch (IOException e) {
+		log(Level.WARNING, "SimpleChatServer.accept()", e);
+	}
+}
+```
 
+```java
+private void read(SelectionKey key) {
+	// SelectionKey로부터 소켓채널을 얻어온다.
+	SocketChannel sc = (SocketChannel) key.channel();
+	// ByteBuffer를 생성한다.
+	ByteBuffer buffer = ByteBuffer.allocateDirect(1024);
+	try {
+		// 요청한 클라이언트의 소켓채널로부터 데이터를 읽어들인다.
+		int read = sc.read(buffer);
+		info(read + " byte 를 읽었습니다.");
+	} catch (IOException e) {
+		try {
+			sc.close();
+		} catch (IOException e1) {
+		}
+		removeUser(sc);
 
+		info(sc.toString() + " 클라이언트가 접속을 해제했습니다.");
+	}
 
+	try {
+		// 클라이언트가 보낸 메시지를 채팅방 안에 모든 사용자에게 브로드캐스트해준다.
+		broadcast(buffer);
+	} catch (IOException e) {
+		log(Level.WARNING, "SimpleChatServer.broadcast()", e);
+	}
+	// 버퍼 메모리를 해제해준다.
+	clearBuffer(buffer);
+}
+```
 
+- 위 코드 두개 모두 요청을 싱글 스레드로 처리하고 있다.
+- 이 부분 역시 ThreadPool 을 사용해서 스레드 여러 개로 동시에 처리할 수 있게 만들면 성능을 향상시킬 수 있다.
+
+- Accept 를 처리하는 것과 Processe 를 처리하는 것으로 나눠서 별도의 독립적인 ThreadPool 로 운영되게 하자.
+- 그러면 병목지점이 되는 곳을 파악했을 경우, 그 쪽의 스레드 개수를 늘리는 방식으로 쉽게 튜닝할 수 있다.
 
 # 05. 향상된 서버 만들기
 
