--- a/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
+++ b/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
@@ -162,6 +162,44 @@ private void read(SelectionKey key) {
 
 # 05. 향상된 서버 만들기
 
+앞서 공부한 내용을 적용시켜보자.
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 그림 16-1.png]]
+
+패키지 구조는 크게 event, pool, queue, server, util 패키지가 존재한다.
+
+## 패키지 구조
+
+### event
+
+- 이 패키지에는 서버에서 발생하는 이벤트 형식을 정의하고 있는 NIOEvent 인터페이스와 
+- 이렇게 발생된 이벤트를 처리하기 위해 사용할 Job 클래스가 있다.
+- AdvancedChatServer 는 두 가지 이벤트만을 처리하는데,
+	- 클라이언트가 서버로 Accept 하는 것과 
+	- 클라이언트가 보낸 메시지를 Read 하는 것이다.
+### pool
+
+- AdvancedChatServer 가 기존 서버보다 더 뛰어난 성능을 보일 수 있는 핵심적인 역할을 하는 클래스들을 담은 곳이다.
+
+- ByteBufferPool
+	- 14장의 파일매핑 부분과 같다.
+	- 다만 여기서는 인터페이스를 이용하였다.
+
+- ThreadPool
+	- accept, read/write 를 처리한다.
+	- accept 스레드는 서버에 접속한 클라이언트들을 처리한는 역할을 한다.
+	- read/write 스레드는 클라이언트가 보낸 메시지를 해당 서버에 접속한 모든 클라이언트들에게 브로드캐스트하는 역할을 한다.
+
+- SelectorPool
+	- accept 와 read 두 가지가 존재한다.
+	- 준비된 채널들을 빠르게 처리해주기 위해서 별도의 스레드들이 위 두 가지 셀렉션을 처리하게 만든 것이다.
+
+### queue
+
+### server
+
+### util
+
 
 
 
