--- a/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
+++ b/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
@@ -196,7 +196,16 @@ private void read(SelectionKey key) {
 
 ### queue
 
+- 셀렉터에서 준비된 이벤트들은 스레드들이 다이렉트로 처리할 수 없다.
+- 생성자-소비자 패털을 사용해서 셀렉터와 스레드를 연관시키는 것이다.
+
+- 그리고 이 서버에 접속한 전체 사용자들을 등록하기 위해 ChattingRoom 이라는 Vector 를 상속한 클래스를 만들어 사용했다.
+
 ### server
+
+
+
+
 
 ### util
 
