update: 16. 향상된 서버 만들기

--- a/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
+++ b/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
@@ -203,11 +203,12 @@ private void read(SelectionKey key) {
 
 ### server
 
-
-
-
+- AdvancedChatServer 서버를 실행시키는 클래스가 위치한 패키지
+- 서버가 실행되는 데 필요한 각 클래스들을 초기화하고 이들을 시작시키는 역할만을 한다.
 
 ### util
+
+
 
 
 
