update: 16. 향상된 서버 만들기

--- a/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
+++ b/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
@@ -208,6 +208,18 @@ private void read(SelectionKey key) {
 
 ### util
 
+- 동적으로 다이나믹하게 객체를 생성하는 것을 보여주기 위해 ThreadPool 에서 사용하는 Dynamic ClassLoader 클래스가 있는 패키지
+- 서버의 재시작없이도 기능을 확장할 수 있다는 것을 보여주기 위한 패키지
+
+## 전체 구조
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 그림 16-2.png]]
+
+- 이 서버는 전체적으로 생성자-소비자 패턴으로 구성되어 있다.
+- 이벤트가 발생하면 해당 이벤트를 담당하는 핸들러 클래스가 큐에 그 이벤트와 관련 객체를 캡슐화해서 이벤트와 관련된 Queue 내부 목록에 넣는다.
+- 그리고 처리 스레드는 지속적으로 Queue 에 접근해서 자신이 담당하는 이벤트에 해당하는 Queue 내부 목록에서 객체를 가져와 처리한다.
+
+
 
 
 
