update: 16. 향상된 서버 만들기

--- a/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
+++ b/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
@@ -219,8 +219,93 @@ private void read(SelectionKey key) {
 - 이벤트가 발생하면 해당 이벤트를 담당하는 핸들러 클래스가 큐에 그 이벤트와 관련 객체를 캡슐화해서 이벤트와 관련된 Queue 내부 목록에 넣는다.
 - 그리고 처리 스레드는 지속적으로 Queue 에 접근해서 자신이 담당하는 이벤트에 해당하는 Queue 내부 목록에서 객체를 가져와 처리한다.
 
+## 소스코드
 
+```java
+package net.daum.javacafe.server;
 
+import java.io.File; 
+import java.io.IOException;
+import net.daum.javacafe.pool.PoolManager;
+import net.daum.javacafe.pool.buffer.ByteBufferPool;
+import net.daum.javacafe.pool.buffer.ByteBufferPoolIF;
+import net.daum.javacafe.pool.selector.AcceptSelectorPool;
+
+import net.daum.javacafe.pool.selector.RequestSelectorPool;
+import net.daum.javacafe.pool.selector.SelectorPoolIF; 
+import net.daum.javacafe•pool.thread.ThreadPool;
+import net.daum.javacafe.pool.thread.ThreadPoolIF;
+import net.daum.javacafe.queue.BlockingEventQueue;
+import net.daum.javacafe.queue.Queue;
+
+public class AdvancedChatServer {
+
+	private Queue queue = null;
+	private SelectorPoolIF acceptSelectorPool = null;
+	private SelectorPoolIF requestSelectorPool = null;
+
+	private ByteBufferPoolIF byteBufferPool = null;
+
+	ThreadPoolIF acceptThreadPool = null;
+	ThreadPoolIF readWriteThreadPool = null;
+
+	public AdvancedChatServer() {
+		try {
+			initResource();
+			startServer();
+		} catch (IOException e) {
+			e.printStackTrace();
+		}
+	}
+
+	private void initResource() throws IOException {
+		// ByteBufferPool 을 생성한다.
+		File bufferFile = new File("Buffer.tmp");
+		if (!bufferFile.exists()) {
+			bufferFile.createNewFile();
+		}
+		bufferFile.deleteOnExit();
+		byteBufferPool = new ByteBufferPool(20*1024, 40*2048, bufferFile);
+
+		// Queue를 생성한다.
+		queue = BlockingEventQueue.getInstance();
+
+		// PoolManager에 ByteBufferPool을 등록한다.
+		PoolManager.registByteBufferPool(byteBufferPool);
+
+		// ThreadPool을 생성한다.
+		acceptThreadPool = new ThreadPool(queue, "net.daum.javacafe.pool.thread.processor.AcceptProcessor");
+		readWriteThreadPool = new ThreadPool(queue, "net.daum.javacafe.pool.thread.processor.ReadWriteProcessor");
+
+		// SelectorPool을 생성한다.
+		acceptSelectorPool = new AcceptSelectorPool(queue);
+		requestSelectorPool = new RequestSelectorPool(queue);
+
+		// PoolManager에 SelectorPool을 등록한다.
+		PoolManager.registerAcceptSelectorPool(acceptSelectorPool);
+		PoolManager.registerRequestSelectorPool(acceptSelectorPool);
+	}
+
+	private void startServer() {
+		acceptThreadPool.startAll();
+		readWriteThreadPool.startAll();
+
+		acceptSelectorPool.startAll();
+		requestSelectorPool.startAll();
+	}
+
+	public static void main(String[] args) {
+		AdvancedChatServer server = new AdvancedChatServer();
+	}
+}
+```
+
+- 먼저 ByteBufferPoolIF, Queue, ThreadPoolIF, SelectorPoolIF 순 으로 필요한 자원을 초기화한다
+- 그런 후에 startServer() 메소드에서 ThreadPoolIF 와 SelectorPoolIF 의 스레드들을 시작시켜서 서버를 시작한다.
+
+- 생성자-소비자 패턴에서 매개 역할을 하는 Queue 인터페이스와 BlockingEventQueue 구현체를 보자.
+
+```
 
 
 
