update: 16. 향상된 서버 만들기

--- a/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
+++ b/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
@@ -305,9 +305,116 @@ public class AdvancedChatServer {
 
 - 생성자-소비자 패턴에서 매개 역할을 하는 Queue 인터페이스와 BlockingEventQueue 구현체를 보자.
 
+```java
+package net.daum.javacafe.queue;
+
+import net.daum.javacafe.event.Job;
+
+public interface Queue {
+	public Job pop(int eventType);
+	public void push(Job job);
+}
 ```
 
+```java
+package net.daum.javacafe.queue;
 
+import java.util.ArrayList;
+import java.util.List;
+
+import net.daum.javacafe.event.Job;
+import net.daum.javacafe.event.NIOEvent;
+
+public class BlockingEventQueue implements Queue {
+
+	private final Object acceptMonitor = new Object();
+	private final Object readMonitor = new Object();
+
+	private final List acceptQueue = new ArrayList();
+	private final List readQueue = new ArrayList();
+
+	// BlockingEventQueue 하나만 생성할 수 있도록 싱글톤 패턴을 사용한다.
+	private static BlockingEventQueue instance = new BlockingEventQueue();
+
+	public static BlockingEventQueue getInstance() {
+		if (instance == null) {
+			synchronized (BlockingEventQueue.class) {
+				instance = new BlockingEventQueue();
+			}
+		}
+		return instance;
+	}
+
+	private BlockingEventQueue() {}
+
+	// 이벤트 형식에 따라 어떤 큐에서 Job 객체를 가져올지 결정한다.
+	public Job pop(int eventType) {
+		switch (eventType) {
+			case NIOEvent.ACCEPT_EVENT : return getAcceptJob();
+			case NIOEvent.READ_EVENT   : return getReadJob();
+			default : throw new IllegalArgumentException("Illegal EventType..");
+		}
+	}
+
+	private Job getAcceptJobe() {
+		synchronized (acceptMonitor) {
+			if (acceptQueue.isEmpty()) {
+				try {
+					acceptMonitor.wait();
+				} catch (InterruptedException e) {
+					e.printStackTrace();
+				}
+			}
+			return (Job) acceptQueue.remove(0);
+		}
+	}
+
+	private Job getReadJob() {
+		synchronized (readMonitor) {
+			if (readQueue.isEmpty()) {
+				try {
+					readMonitor.wait();
+				} catch (InterruptedException e) {
+					e.printStackTrace();
+				}
+			}
+			return (Job) readQeue.remove(0);
+		}
+	}
+
+	// Job 객체의 이벤트에 따라 어떤 큐에 데이터를 넣을지 결정한다.
+	public void push(Job job) {
+		if (job != null) {
+			int eventType = job.getEventType();
+			switch (eventType) {
+				case NIOEvent.ACCEPT_EVENT : putAcceptJob(job); break;
+				case NIOEvent.READ_EVENT : putReadJob(job); break;
+				default : throw new IllegalArgumentException("Illegal EventType");
+			}
+		}
+	}
+
+	private void putAcceptJob(Job job) {
+		synchronized (acceptMonitor) {
+			acceptQueue.add(job);
+			acceptMonitor.notify();
+		}
+	}
+
+	private void putReadJob(Job job) {
+		synchronized (readMonitor) {
+			readMonitor.add(job);
+			readMonitor.notify();
+		}
+	}
+}
+```
+
+- 이 클래스는 내부적으로 큐 두 개를 가지고 있다 (acceptQueue, readQueue)
+	- 이벤트에 따라 다른 큐를 사용하게 만드는 대신 공토된 큐 하나만을 사용했다.
+	- 그리고 해당 큐 안에서 이벤트에 따라 다른 저장 큐를 사용하도록 구현했다.
+- 저장 큐가 두 개기 때문에 해당 큐에 따라 사용할 모니터도 두 개이다.
+	- accpetMonitor, readMonitor
 
 
 
