update: 16. 향상된 서버 만들기

--- a/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
+++ b/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
@@ -221,6 +221,8 @@ private void read(SelectionKey key) {
 
 ## 소스코드
 
+### AdvancedChatServer
+
 ```java
 package net.daum.javacafe.server;
 
@@ -302,6 +304,8 @@ public class AdvancedChatServer {
 
 - 먼저 ByteBufferPoolIF, Queue, ThreadPoolIF, SelectorPoolIF 순 으로 필요한 자원을 초기화한다
 - 그런 후에 startServer() 메소드에서 ThreadPoolIF 와 SelectorPoolIF 의 스레드들을 시작시켜서 서버를 시작한다.
+
+### Queue 인터페이스와 BlockingEventQueue
 
 - 생성자-소비자 패턴에서 매개 역할을 하는 Queue 인터페이스와 BlockingEventQueue 구현체를 보자.
 
@@ -416,5 +420,42 @@ public class BlockingEventQueue implements Queue {
 - 저장 큐가 두 개기 때문에 해당 큐에 따라 사용할 모니터도 두 개이다.
 	- accpetMonitor, readMonitor
 
+### Job 객체
+
+```java
+package net.daum.javacafe.event;
+
+import java.util.Map;
+
+public class Job {
+	private int eventType;
+	private Map session = null;
+
+	public Job () {}
+	
+	public Job(int eventType, Map session) { 
+		this.eventType = eventType;
+		this.session = session;
+	}
+
+	public Map getSession() {
+		return session;
+	}
+
+	public void setSession(Map session) {
+		this.session = session;
+	}
+
+	public int getEventType() {
+		return eventType;
+	}
+
+	public void setEventType(int eventType) {
+		this.eventType = eventType;
+	}
+}
+```
+
+- 이벤트 형식에 해당하는 정보와 그 이벤트를 처리하는 데 필요한 기타 정보를 저장하고 있는 Map 객체를 캡슐화해서 가지고 있는 단순한 형태의 객체이다.
 
 
