update: 16. 향상된 서버 만들기

--- a/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
+++ b/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
@@ -458,4 +458,202 @@ public class Job {
 
 - 이벤트 형식에 해당하는 정보와 그 이벤트를 처리하는 데 필요한 기타 정보를 저장하고 있는 Map 객체를 캡슐화해서 가지고 있는 단순한 형태의 객체이다.
 
+### PoolManager, SelectorPoolIF, SelectorPoolAdaptor, AcceptSelectorPool
 
+- pool 패키지의 세 가지 풀링 클래스를 보자.
+- ByteBufferPool 은 14장에서 설명했으니 넘어간다.
+
+```java
+package net.daum.javacafe.pool;
+
+import java.util.HashMap;
+import java.util.Map;
+
+import net.daum.javacafe pool.buffer.ByteBufferPoolIF;
+import net.daum.javacafe pool.selector.SelectorPoolIF;
+
+public class PoolManager {  
+	private static Map map = new HashMap();
+
+	// PoolManager 단 하나만 생성하기 위해 싱글톤 패턴을 사용한다.  
+	private static PoolManager instance = new PoolManager ();
+
+	private PoolManager() {}
+
+	// AcceptSelectorPool에 등록한다.  
+	public static void registAcceptSelectorPool(SelectorPoolIF selectorPool) {
+		map.put("AcceptSelectorPool", selectorPool) ;
+	}
+
+	// RequestSelectorPool에등록한다.  
+	public static void registRequestSelectorPool(SelectorPoolIF selectorPool) {
+		map.put("RequestSelectorPool", selectorPool);
+	}
+
+	// AcceptSelectorPool 가져오기  
+	public static SelectorPoolIF getAcceptSelectorPᄋ이 () {
+		return (SelectorPoolIF) map.get("AcceptSelectorPool");
+	}
+
+	// RequestSelectorPool 가져오기  
+	public static SelectorPoolIF getRequestSelectorPool() {
+		return (SelectorPoolIF) map.get("RequestSelectorPool");
+	}
+
+	// ByteBufferPool을 등록한다.  
+	public static void registByteBufferPool(ByteBufferPoolIF byteBufferPool) {
+		map.put("ByteBufferPool", byteBufferPool);
+	}
+
+	// ByteBufferPool 가져오기
+	public static ByteBufferPoolIF getByteBufferPool() {
+		return (ByteBufferPoolIF) map.get("ByteBufferPool");
+	}
+}
+```
+
+- 이 클래스는 이후 ThreadPool 안의 accept, read 이벤트를 처리하는 스레드들이 SelectorPoolIF 와 ByteBufferPoolIF 을 사용해야 할 때, 해당 풀을 손쉽게 가져오게 하기 위해서 만들었다.
+- 사실 이 클래스는 각각의 풀을 제어하기 위한 컨트롤러의 역할을 하게 하는 것이 바람직하다.
+- 하지만 코드를 단순하게 만들기 위해서 원래 의도와는 다른 행동을 하는 객체로 구현했다.
+
+```java
+package net.daum.javacafe.pool.selector;
+
+public interface SelectorPoolIF {
+	public Thread get();
+	public void put(Thread handler); public int size();
+	public boolean isEmpty();
+	public void startAll();
+	public void stopAll();
+}
+```
+
+- 위 메소드들은 SelectorPoolAdaptor 라는 추상 클래스에서 실제적으로 구현하고 있다.
+
+```java
+package net.daum.javacafe.pool.selector;
+
+import java.util.ArrayList; 
+import java.util.List;
+
+public abstract class SelectorPoolAdaptor implements SelectorPoolIF {
+		
+	protected int size = 2;
+	private int roundRobinlndex = 0;
+		
+	private final Object monitor = new Object();
+	protected final List pool = new ArrayList();
+
+	// 하위 클래스에서 구현해야 하는 메소드  
+	protected abstract Thread createHandler(int index);
+	public abstract void startAll();  
+	public abstract void stopAll();
+
+	public Thread get() { 
+		synchronized (monitor) {
+			return (Thread) pool.get(roundRobinIndex++ % size);
+		}
+	}
+
+	public void put(Thread handler) {
+		synchronized (monitor) {
+			if (handler != null) {
+				pool. add(handler);
+			}
+			monitor.notify();
+		}
+	}
+
+	public int size() {
+		synchronized (monitor) {
+			return pool.size();
+		}
+	}
+
+	public boolean isEmpty() {
+		synchronized (monitor) {
+			return pool.isEmpty();
+		}
+	}
+}
+```
+
+- 내부적으로 List 형태의 풀을 만들어서 담아둘 수 있게 하고 있다.
+- 이 풀에서는 라운드로빈 방식을 사용하고 있다.
+	- 이렇게 한 이유는 클라이언트들이 접속했을 경우, Request 역할을 하는 셀렉터에게 고르게 등록시키기 위해서다.
+	- 이 방법보다 더 나은 방법은 각 Request 셀렉터의 현재 등록된 채널들의 수를 알아와서 가장 적은 쪽의 Request 셀렉터로 등록하게 하는 방식이다.
+
+- 그러면 SelectorPoolAdaptor 클래스를 상속받아 실제적인 핸들러들을 생성해서 등록하는 AcceptSelectorPool 을 보자.
+
+```java
+package net.daum.javacafe.pool.selector;
+
+import java.io.IOException;  
+import java.nio.channels.Selector;
+import java.util.Iterator;
+
+import net.daum.javacafe.pool.selector.handler.AcceptHandler;
+import net.daum.javacafe.queue.Queue;
+
+public class AcceptSelectorPool extends SelectorPᄋ이Adaptor {
+
+	private int port = 9090;
+	private Queue queue = null;
+
+	public AcceptSelectorPool(Queue queue) {
+		this(queue, 1, 9090);
+	}
+
+	public AcceptSelectorPool(Queue queue, int size, int port) {
+		super. size = size;  
+		this.queue = queue;  
+		this.port = port;
+		init();
+	}
+
+	private void init() {  
+		for (int i = 0; i < size; i++) {
+			pool.add(createHandler(i));
+		}
+	}
+
+	protected Thread createHandler(int index) {
+		Selector selector = null;  
+		try {
+			selector = Selector.open();
+		} catch (IOException e) { 
+			e.printStackTrace() ;
+		}  
+		Thread handler = new AcceptHandler(queue,selector, port, index);
+		return handler;
+	}
+
+	public void startAll() {  
+		Iterator iter = pool. iterator();
+		while (iter.hasNext()) {
+			Thread handler = (Thread) iter.next();
+			handler•start();
+		}
+	}
+
+	public void stopAll() {  
+		Iterator iter = pool.iterator();
+		while (iter.hasNext()) {
+			Thread handler = (Thread) iter.next();
+			handler.interrupt(};
+			handler = null;
+		}
+	}
+}
+```
+
+- 생성자에서 공통적으로 사용할 Queue 객체를 받아서 내부적으로 저장해둔 후에 실제 행동을 할 핸들러를 생성할 때 파라미터로 넘겨주는 곳을 주의깊게 보자.
+- 이때 Selector 도 새롭게 생성해서 같이 넘겨주는 것을 알 수 있다.
+- `startAll()`과 `stopAll()` 메소드는 이 풀에 등록된 핸들러들을 모두 시작시키거나 모두 중지시키는 역할을 한다.
+- 이들 메소드의 구현에서 짐작 할 수 있듯이 각각의 핸들러는 독립적으로 행동하도록 하기 위해 Thread 를 상속받는다.
+
+- Accept 와 Request 핸들러를 보자.
+
+```java
+
+```
