--- a/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
+++ b/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
@@ -655,5 +655,96 @@ public class AcceptSelectorPool extends SelectorPᄋ이Adaptor {
 - Accept 와 Request 핸들러를 보자.
 
 ```java
+package net.daum.javacafe.pool.selector.handler;
 
+import java.io.IOException;
+import java.net.InetSocketAddress;
+import java.nio.channels.SelectionKey;
+import java.nio.channels.Selector;
+import java.nio.channels.ServerSocketChannel;
+import java.nio.channels.SocketChannel;
+import java.util.HashMap;
+import java.util.Iterator;
+import java.util.Map;
+
+import net.daum.javacafe.event.Job;
+import net.daum.javacafe.event.NIOEvent;
+import net.daum•javacafe.queue.Queue;
+
+public class AcceptHandler extends Thread {
+
+	private Queue queue = null;  
+	private Selector selector = null;
+	private int port = 9090;  
+	private String name = "AcceptHandler-”;
+
+	public AcceptHandler(Queue queue, Selector selector, int port, int index) {
+		this.queue = queue;
+		this.selector = selector;
+		this.port = port;
+		setName(name + index);
+		init();
+	}
+
+	// 이 메소드에서 초기화 작업을 한다.
+	private void init() {
+		try {
+			// 서버소켓채널을생성한다.  
+			ServerSocketChannel ssc = ServerSocketChannel.open();
+			// 서버소켓채널을 비블록킹 모드로 설정한다. ssc.configureBlocking(false);
+			InetSocketAddress address = new InetSocketAddress("localhost", port);
+			// 바운드한다.  
+			ssc.socket().bind(address);
+
+			System.out.println("@AcceptHandler(" + getName () + ") Bound to " + address);
+
+			// 셀렉터에 등록한다.
+			ssc.register(this. selector, SelectionKey,OP_ACCEPT);
+		} catch (lOException e) {
+			e .printStackTrace();
+		}
+	}
+
+	// 이 메소드 안에서 무한루프를 돌면서 클라이언트의 Accept 이벤트를 처리한다.
+	public void run() {
+		try {
+			while (!Thread.currentThread().islnterrupted()) {
+				// 블록킹되는 select() 메소드를 시용한다.
+				int keysReady = selector.select();
+				acceptPendingConnections();
+			}
+		} catch (Exception e) {
+			// e.printStackTrace();
+		}
+	}
+
+	// 준비된 accept 이벤트들을 처리하는 메소드  
+	private void acceptPendingConnections() throws Exception {
+		Iterator iter = selector.selectedKeys().iterator();
+		while (iter.hasNext()) {
+			SelectionKey key = (SelectionKey) iter.next();
+			iter.remove();
+			
+			ServerSocketChannel readyChannel = (ServerSocketChannel) key.channel();
+			SocketChannel sc = readyChannel.accept();
+			
+			System.out.println("@AcceptHandler(" + getName() + ") connection accepted from " + sc.socket().getlnetAddress());
+			
+			pushMyJob(sc);
+		}
+	}
+
+	// 여기서 접속한 클라이언트와 연결하기 위한 소켓채널과 이벤트 형식을
+	// Job 객체로 캡슐화한 후에 공통적으로 사용하는 큐에 넣는다.
+	// 즉，이 클래스가 Accept 이벤트에 대해 생성자(producer) 의 역할을 하는 것이다.
+	private void pushMyJob(SocketChannel sc) {
+		Map session = new HashMap();
+		session.put ("SocketChannel”, sc);
+		Job job = new Job (NIOEvent.ACCEPT_EVENTf session);
+		queue.push(job);
+	}
+}
 ```
+
+- 접속된 클라이언트를 여기서 바로 처리하는 것이 아니라 Job 객체로 캡슐화해서 큐에 집어넣는다.
+- 이후 이 객체는 Accept 처리를 담당하는 ThreadPool 의 스레드가 이 큐 에서 Job 객체를 꺼내서 처리한다.
