update: 16. 향상된 서버 만들기

--- a/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
+++ b/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
@@ -747,4 +747,111 @@ public class AcceptHandler extends Thread {
 ```
 
 - 접속된 클라이언트를 여기서 바로 처리하는 것이 아니라 Job 객체로 캡슐화해서 큐에 집어넣는다.
-- 이후 이 객체는 Accept 처리를 담당하는 ThreadPool 의 스레드가 이 큐 에서 Job 객체를 꺼내서 처리한다.
+- 이후 이 객체는 Accept 처리를 담당하는 ThreadPool 의 스레드가 이 큐에서 Job 객체를 꺼내서 처리한다.
+
+
+- RequestHandler 는 AcceptHandler 클래스와 달리 Thread 를 직접적으로 상속받지 않고 중간에 HandlerAdaptor 추상 클래스를 상속받는다.
+
+```java
+package net.daum.javacafe.pool.selector.handler;
+
+import java.nio.channels.SocketChannel;
+
+public abstract class HandlerAdaptor extends Thread {
+
+	public abstract void run();
+	public abstract void addClient(SocketChannel sc);
+}
+```
+
+- `run()` 메소드는 스레드를 상속받아서 이 메소드를 구현해야 하는데, 그 구현을 하위 구현 클래스에 넘기기 위한 것이다.
+- `addClient()` 메소드는 Accept 요청을 처리하는 ThreadPool 의 스레드가 등록하기 원하는 소켓채널을 RequestHandler 에 등록할 수 있게 만드는 메소드다.
+
+```java
+package net.daum.javacafe.pool.selector.handler;
+
+import java.nio.channels.ClosedChannelException;
+import java.nio.channels.SelectionKey; 
+import java.nio.channels.Selector; 
+import java.nio.channels.SocketChannel; 
+import java.util.HashMap;
+import java.util.Iterator;
+import java.util.Map;
+import java.util.Vector;
+
+import net.daum.javacafe.event.Job; 
+import net.daum.javacafe.event.NIOEvent; 
+import net.daum.javacafe.queue.Queue;
+
+public class RequestHandler extends HandlerAdaptor {
+
+	private Queue queue = null;  
+	private Selector selector = null;
+	private String name = "RequestHandler-";
+	
+	private Vector newClients = new Vector();
+	
+	public RequestHandler(Queue queue, Selector selector, int index) { 
+		this.queue = queue;
+		this.selector = selector;
+		setName(name + index);
+	}
+
+	public void run() {
+		try {
+			while (!Thread.currentThread().isInterrupted()) {
+				// 등록하려는 소켓채널들을 등록시킨다.
+				processNewConnection();
+				// 비블록킹 모드의 select() 메소드
+				int keysReady = selector.select(1000);
+				System.out.println("@RequestHandler(" + getName () + ") selected :" + keysReady );
+				// 준비된 채널이 한 개이상이면 실행시킨다.
+				if (keysReady > 0) {  
+					// read 이벤트를 처리한다.
+					processRequest();
+				}
+			}
+		} catch (Exception e) {
+			e.printStackTrace();
+		}
+	}
+
+	// newClients 벡터에 저장된 등록하려는 소켓채널들을  
+	// 이 클래스의 Selector에 등록시키고 채팅방에 추가한다.  
+	private synchronized void processNewConnection () throws ClosedChannelException {
+		Iterator iter = newClients.iterator();
+		while (iter.hasNext()) {
+			SocketChannel sc = (SocketChannel)iter.next();
+			sc.register(selector, SelectionKey.OP_READ};
+			ChattingRoom.getlnstance().add(sc);  
+			System.out.println("@RequestHandler(" + getName() + ") success regist : " + sc.toString());
+		}
+		newClients.clear();
+	}
+
+	private void processRequest() {  
+		Iterator iter = selector.selectedKeys().iterator();
+		while (iter.hasNext()) {
+			SelectionKey key = (SelectionKey) iter.next ();
+			iter.remove();
+			pushMyJob(key);
+		}
+	}
+
+	// AcceptHandler와 마찬가지로 read 이벤트와 관련 객체를 캡술화한
+	// Job 객체를 생성하고 이 객체를 큐에 집어넣는다.
+	private void pushMyJob(SelectionKey key) {
+		Map session = new HashMap();
+		session.put ("SelectionKey", key);
+		Job job = new Job(NIOEvent.READ_EVENT, session);
+		
+		queue.push(job);
+	}
+
+	// Accept 처리 스레드에서 이 메소드를 호출해서 소켓채널을 벡터에 추가한다.
+	public void addClient(SocketChannel sc) {
+		newClients.add(sc);
+	}
+}
+```
+
