update: 16. 향상된 서버 만들기

--- a/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
+++ b/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
@@ -789,7 +789,7 @@ public class RequestHandler extends HandlerAdaptor {
 	private Selector selector = null;
 	private String name = "RequestHandler-";
 	
-	private Vector newClients = new Vector();
+	private Vector newClients = new Vector(); // 중요
 	
 	public RequestHandler(Queue queue, Selector selector, int index) { 
 		this.queue = queue;
@@ -822,8 +822,8 @@ public class RequestHandler extends HandlerAdaptor {
 		Iterator iter = newClients.iterator();
 		while (iter.hasNext()) {
 			SocketChannel sc = (SocketChannel)iter.next();
-			sc.register(selector, SelectionKey.OP_READ};
-			ChattingRoom.getlnstance().add(sc);  
+			sc.register(selector, SelectionKey.OP_READ}; // 중요
+			ChattingRoom.getlnstance().add(sc);   // 중요
 			System.out.println("@RequestHandler(" + getName() + ") success regist : " + sc.toString());
 		}
 		newClients.clear();
@@ -845,13 +845,37 @@ public class RequestHandler extends HandlerAdaptor {
 		session.put ("SelectionKey", key);
 		Job job = new Job(NIOEvent.READ_EVENT, session);
 		
-		queue.push(job);
+		queue.push(job); // 중요
 	}
 
 	// Accept 처리 스레드에서 이 메소드를 호출해서 소켓채널을 벡터에 추가한다.
 	public void addClient(SocketChannel sc) {
-		newClients.add(sc);
+		newClients.add(sc); // 중요
 	}
 }
 ```
+
+- Accept 처리 스레드가 등록한 소켓채널을 셀렉터에 등록시키고 이 셀렉터에서 준비된 Read 이벤트들은 Job 객체로 캡슐화해서 큐에 집어넣는다.
+- 그러면 이후 처리는 ReadWrite 처리스레드가 하게 된다.
+
+- ThreadPool 에는 해당 객체가 어떻게 행동할지를 정의한 ThreadPoolIF 인터페이스가 있으며 이것을 구현한 것이 ThreadPool 클래스다.
+
+```java
+package net.daum.javacafe.pool.thread;
+
+public interface ThreadPoolIF {
+	public void addThread();
+	public void removeThread();
+	public void startAll();
+	public void stopAll();
+}
+```
+
+- 이 인터페이스는 내부의 모든 스레드들을 시작 또는 중지시킬 수 있는 메소드가 있다.
+- 그리고 동적으로 스레드를 추가 또는 삭제할 수 있는 메소드를 제공한다.
+
+```java
+
+```
+
 
