update: 16. 향상된 서버 만들기

--- a/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
+++ b/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
@@ -875,7 +875,148 @@ public interface ThreadPoolIF {
 - 그리고 동적으로 스레드를 추가 또는 삭제할 수 있는 메소드를 제공한다.
 
 ```java
+package net.daum.javacafe.pool.thread;
 
+import java.util.ArrayList;
+import java.util.Iterator;
+import java.util.List;
+
+import net.daum.javacafe.queue.Queue;
+import net.daum.javacafe.util.DynamicClassLoader;
+
+public class ThreadPool implements ThreadPoolIF {
+
+	private int max = 10; // 중요
+	private int min = 2; // 중요
+	private int current = 0; // 중요
+	
+	private final Object monitor = new Object(); // 중요
+	private final List pool = new ArrayList(); // 중요
+	
+	private Queue queue = null;
+	private String type = null;
+	
+	public ThreadPool(Queue queue, String type) {
+		this(queue, type, 2, 10);
+	}
+	
+	public ThreadPool(Queue queue, String type, int min, int max) {
+		this.queue = queue;  
+		this.type = type;  
+		this.min = min;
+		this.max = max;
+		init();
+	}
+	
+	private void init() { 
+		for (int i = 0; i < min; i++) {
+			pool.add(createThread());
+		}
+	}
+	
+	private synchronized Thread createThread() {
+		Thread thread = null;
+		try {
+			thread = (Thread) DynamicClassLoader.createlnstance(type, queue); // 중요
+		} catch (Exception e) {
+			e.printStackTrace();
+		}
+		current++; // 중요
+		return thread;
+	}
+		
+	
+	public void startAll() {
+		synchronized (monitor) {
+			Iterator iter = pool.iterator();
+			while (iter.hasNext()) {
+				Thread thread = (Thread) iter.next();
+				thread.start();
+			}
+		}
+	}
+	
+	public void stopAll() {
+		synchronized (monitor) {
+			Iterator iter = pool.iterator();
+			while (iter.hasNext()) {
+				Thread thread = (Thread) iter.next();
+				thread.interrupt();
+				thread = null;
+			}
+			pool.clear();
+		}
+	}
+	
+	public void addThread() {
+		synchronized (monitor) {
+			if (current < max) { // 중요
+				Thread t = createThread();
+				t.start();
+				pool.add(t);
+			}
+		}
+	}
+	
+	public void removeThread() {
+		synchronized (monitor) {
+			if (current > min) { // 중요
+				Thread t = (Thread) pool.remove(0);
+				t.interrupt();
+				t = null;
+			}
+		}
+	}
+}
 ```
 
+- 이 클래스는 min 에 해당하는 개수만큼의 스레드를 초기에 생성한다.
+- 그리고 이후 `addThread()` 메소드로 스레드를 추가 할 수 있다.
+- 하지만 `중요` 라고 주석처리된 부분처럼 제한된 스레드 이상을 생성하지는 못하게 되어 있다.
+- `remove ThreadO` 메소드는 스레드를 풀에서 스레드 하나를 제거하는 메소드다.
+	- 이 메소드 역시 현재 스레드가 min 개일 경우 더 이상 제거하지 못하게 되어 있다.
+
+- 실제 큐에서 객체를 꺼내서 조작하는 두 가지 프로세스 클래스를 살펴보자.
+
+```java
+package net.daum.javacafe.pool.thread.processor;
+
+import java.nio.channels.SocketChannel;
+
+import net.daum.javacafe.event.Job;
+import net.daum.javacafe.event.NIOEvent;
+import net.daum.javacafe.pool.PoolManager;
+import net.daum.javacafe.pool.selector.handler.HandlerAdaptor;
+import net.daum.javacafe.queue.ChattingRoom;
+import net.daum.javacafe.queue.Queue;
+
+public class AcceptPrᄋcessor extends Thread {
+
+	private Queue queue = null;
+	
+	public AcceptProcessor(Queue queue) {
+		this.queue = queue;
+	}
+	
+	public void run() {
+		try {
+			while (!Thread.currentThread().islnterrupted()) { 
+				// 큐에서 Accept 이벤트에 해당하는 Job 객체를 가져온다.
+				Job job = queue.pop (NIOEvent.ACCEPT_EVENT);
+				SocketChannel sc = (SocketChannel) job.getSession().get("SocketChannel”);
+				// 비블록킹 모드로 설정한다.
+				sc.configureBlocking(false};
+				// 핸들러를 가져온다.  
+				// get() 메소드 내부적으로 라운드로빈 방식을 사용한다.
+				HandlerAdaptor handler = (HandlerAdaptor) PoolManager.getRequestSelectorPool().get();
+				// RequestHandler에 소켓채널을 추가한다.
+				handler.addClient(sc);
+			}
+		} catch (Exception e) {
+			// e .printStackTrace();
+		}
+	}
+}
+
+```
 
