update: 16. 향상된 서버 만들기

--- a/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
+++ b/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
@@ -235,7 +235,7 @@ import net.daum.javacafe.pool.selector.AcceptSelectorPool;
 
 import net.daum.javacafe.pool.selector.RequestSelectorPool;
 import net.daum.javacafe.pool.selector.SelectorPoolIF; 
-import net.daum.javacafe•pool.thread.ThreadPool;
+import net.daum.javacafe.pool.thread.ThreadPool;
 import net.daum.javacafe.pool.thread.ThreadPoolIF;
 import net.daum.javacafe.queue.BlockingEventQueue;
 import net.daum.javacafe.queue.Queue;
@@ -632,7 +632,7 @@ public class AcceptSelectorPool extends SelectorPᄋ이Adaptor {
 		Iterator iter = pool. iterator();
 		while (iter.hasNext()) {
 			Thread handler = (Thread) iter.next();
-			handler•start();
+			handler.start();
 		}
 	}
 
@@ -669,7 +669,7 @@ import java.util.Map;
 
 import net.daum.javacafe.event.Job;
 import net.daum.javacafe.event.NIOEvent;
-import net.daum•javacafe.queue.Queue;
+import net.daum.javacafe.queue.Queue;
 
 public class AcceptHandler extends Thread {
 
@@ -1002,15 +1002,15 @@ public class AcceptPrᄋcessor extends Thread {
 		try {
 			while (!Thread.currentThread().islnterrupted()) { 
 				// 큐에서 Accept 이벤트에 해당하는 Job 객체를 가져온다.
-				Job job = queue.pop (NIOEvent.ACCEPT_EVENT);
+				Job job = queue.pop(NIOEvent.ACCEPT_EVENT); // 중요
 				SocketChannel sc = (SocketChannel) job.getSession().get("SocketChannel”);
 				// 비블록킹 모드로 설정한다.
 				sc.configureBlocking(false};
 				// 핸들러를 가져온다.  
 				// get() 메소드 내부적으로 라운드로빈 방식을 사용한다.
-				HandlerAdaptor handler = (HandlerAdaptor) PoolManager.getRequestSelectorPool().get();
+				HandlerAdaptor handler = (HandlerAdaptor) PoolManager.getRequestSelectorPool().get(); // 중요
 				// RequestHandler에 소켓채널을 추가한다.
-				handler.addClient(sc);
+				handler.addClient(sc); // 중요
 			}
 		} catch (Exception e) {
 			// e .printStackTrace();
@@ -1020,3 +1020,95 @@ public class AcceptPrᄋcessor extends Thread {
 
 ```
 
+- `중요` 라고 주석처리된 부분을 보면 큐에서 Job 객체를 꺼내오고 이렇게 가져온 객체에서 소켓 채널을 꺼낸다.
+- 그리고 이 소캣채널 객체를 비블록킹 모드로 설정한 후에 라운드로빈 방식으로 가져온 RequestHandler 의 벡터에 소켓채널을 집어넣는다.
+
+```java
+package net.daum.javacafe.pool.thread.processor;
+
+import java.io.IOException;  
+import java.nio.ByteBuffer;  
+import java.nio.channels.SelectionKey;
+import java.nio.channels.SocketChannel;
+import java.util.Iterator;
+
+import net.daum.javacafe.event.Job;
+import net.daum.javacafe.event.NIOEvent;
+import net.daum.javacafe.pool.PoolManager;
+import net.daum.javacafe.pool.buffer.ByteBufferPoolIF;
+import net.daum.javacafe.queue.ChattingRoom;  
+import net.daum.javacafe.queue.Queue;
+
+public class ReadWritePrᄋcessor extends Thread {
+
+	private Queue queue = null;
+	
+	public ReadWriteProcessor(Queue queue) {
+		this.queue = queue;
+	}
+	
+	public void run() {
+		try {
+			while (!Thread.currentThread().isInterrupted()) {
+				// 큐에서 Read 이벤트 Job 객체를 가져온다.
+				Job job = queue.pop(NIOEvent.READ_EVENT); // 중요
+				// Job 객체에서 SelectionKey를 꺼낸다.
+				SelectionKey key = (SelectionKey) job.getSession().get("SelectionKey"); // 중요
+				// SelectionKey 에서 소켓채널을 가져온다.
+				SocketChannel sc = (SocketChannel) key.channel(); // 중요
+				
+				try {
+					// 채팅방 안의 모든 사용자에게 메시지를 전달한다.
+					broadcast(sc); // 중요
+				} catch (IOException e) {
+					closeChannel(sc);
+				} catch (Exception e) {
+					// e.printStackTrace();
+				}
+			}
+		}
+	}
+	
+	private void broadcast(SocketChannel sc) throws IOException {
+		// PoolManager에서 ByteBufferPoolIF를 가져온다.  
+		ByteBufferPoolIF bufferPool = PoolManager.getByteBufferPool(); // 중요
+		ByteBuffer buffer = null;
+		try {
+			// 가져온 버퍼 풀에서 버퍼를 하나 꺼내온다.
+			buffer = bufferPool.getMemoryBuffer(); // 중요
+			
+			// 데이터의 일부만 전송되었을 수 있으므로 두 번 read 한다.
+			for (int i = 0; i < 2; i++) { // 중요
+				sc.read(buffer); // 중요
+			}
+			buffer.flip();
+	
+			Iterator iter = ChattingRoom.getlnstance().iterator();
+			while (iter.hasNext()) {
+				SocketChannel member = (SocketChannel) iter.next();
+				if (member != null && member.isConnected()) {
+					// 데이터 전송이 일부분만 되었을 수 있으므로 버퍼를 확인해서 모두 보낸다.
+					while (buffer.hasRemaining()) { // 중요
+						member.write(buffer); // 중요
+					}
+					buffer.rewind(); // 중요
+				}
+			}
+		} finally { // 중요
+			// finally 문 안에서 확실하게 버퍼를풀에 반환한다.
+			bufferPool.putBuffer(buffer); // 중요
+		}
+	}
+	
+	private void closeChannel(SocketChannel sc) {
+		try {
+			sc.close();
+			ChattingRoom.getlnstance().remove(sc);
+		} catch (IOException e) {
+		}
+	}
+}
+```
+
+- 큐에서Job 객체를 꺼내오고 이렇게 가져온 객체를 조작해서 채팅룸 안의 모든 사용자들에게 동일한 메시지를 브로드캐스트 해준다.
+- 이 서버에 대한 클라이언트는 15장에서 만든 것을 사용했다.
