update: 일프로 강사가 일하는 방법

--- a/02. Work/일프로 강사가 일하는 방법.md
+++ b/02. Work/일프로 강사가 일하는 방법.md
@@ -8,7 +8,7 @@ tags:
 
 일프로 강사가 연봉이 일프로가 될 때까지 했던 노력들은 무엇이 있을까.
 
-![[섹션 0 - 그림 1.png|800]]
+![[쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 섹션 0 - 그림 1.png|800]]
 
 
 # 0. 다양한 프로젝트 경험
@@ -17,7 +17,7 @@ tags:
 - 그러면서 다양한 프로젝트 경험을 할 수 있었고, 이 과정에서 `자신감`, `주체성`, `책임감`을 키울 수 있었다.
 - 이것들이 있었기 때문에 정규직에서 프리랜서로 전향할 때도, 개발자에서 쿠버네티스 엔지니어로 전향할 때도 쉽게 시작할 수 있는 마음이 생겼다.
 
-![[섹션 0 - 그림 2.png|800]]
+![[쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 섹션 0 - 그림 2.png|800]]
 
 - 하지만 연봉을 올리기에는 이것만으로는 부족하다.
 - 이직이 아닌 회사 내부에서 연봉을 올릴 때는 다른 노력들이 필요하다.
@@ -35,14 +35,14 @@ tags:
 - 그러면 마음속으로 실력이 쌓이는 것이 아니라 객관적으로 자료가 쌓인다.
 - 이렇게 습관을 들이면 시간이 오래 지나도 실력이 떨어지는 공부가 아닌, 꾸준히 실력을 쌓아가는 공부를 할 수 있다.
 
-![[섹션 0 - 그림 3.png|800]]
+![[쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 섹션 0 - 그림 3.png|800]]
 
 - 예를 들어, Git 을 공부한다고 할 때 Git 이 동작하는 방식을 PPT 로 만들어 놓으니까 시간이 지나도 자료를 보고 금방 적응할 수 있었다.
 - 그리고 다른 사람들과 이야기 할 때 이런 자료를 가지고 회의를 할 수 있다.
 	- 이러면 서로 의사소통이 명확해지고, 내가 회의를 주도할 수 있게 된다.
 	- 보통 회의를 할 때 내 생각을 자료로 준비해오는 사람이 별로 없기 때문이다.
 
-![[섹션 0 - 그림 4.png|800]]
+![[쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 섹션 0 - 그림 4.png|800]]
 
 # 2. 상사와의 커뮤니케이션
 
@@ -56,7 +56,7 @@ tags:
 - 먼저 회의를 할 때 간단하게라도 내가 할 일들을 PPT 로 만들었다.
 	- 그리고 현재 하고 있는 일을 최대한 이해하기 쉽고 명시적으로 이야기하려고 노력하였다.
 
-![[섹션 0 - 그림 5.png|800]]
+![[쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 섹션 0 - 그림 5.png|800]]
 
 - Python 으로 만들어진 프로젝트를 Java 로 변환하는 프로젝트가 있었다.
 - 일프로 강사는 이전까지 Python 경험이 전무한 상태
@@ -67,7 +67,7 @@ tags:
 - 그래서 아래와 같이 로직구성도를 가지고, 지금 어느 정도 코딩이 됐고, 테스트는 어느 정도가 됐는지를 매일 업데이트 했다.
 - 그러다가 문제되는 부분이 있으면, 또 PPT 로 정리해서 어떤 문제가 있고, 자신이 생각하는 대안은 무엇인지도 리스트를 만들었다.
 
-![[섹션 0 - 그림 6.png|800]]
+![[쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 섹션 0 - 그림 6.png|800]]
 
 - 상사에게 들은 칭찬중 가장 기억에 남는 것이 두개 있다.
 	- `너는 뭘 시켜도 안심이 돼`
@@ -92,7 +92,7 @@ tags:
 
 - 이런 자세는 직장 말고도 다른곳에서도 도움이 되었다.
 
-![[섹션 0 - 그림 7.png|300]]
+![[쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 섹션 0 - 그림 7.png|300]]
 
 - 위와 같이 인프런 강사 경험을 거치며 동기부여와 성장도 할 수 있었다.
 
