update: 쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 쿠버네티스 제대로 시작하기 - 컨테이너 한방 정리

--- a/01. Development/02. Lecture/쿠버네티스 어나더 클래스 (지상편)/컨테이너 한방 정리.md
+++ b/01. Development/02. Lecture/쿠버네티스 어나더 클래스 (지상편)/컨테이너 한방 정리.md
@@ -9,11 +9,78 @@ tags:
   - Linux
   - DevOps
 ---
+# 전체 그림
+
 ![[쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 섹션 1 - 그림 1.png]]
 
+# Linux OS
 
+![[쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 섹션 1 - 그림 2.png]]
 
+- 최초의 OS 로 UNIX 가 있었다.
+- 아직도 기업에서 쓰고 있긴 하지만, 유료라서 금방 잊혀졌다.
 
+- Linux 가 새로 나왔다.
+- UNIX 와 달리 무료라서, 이를 기반으로 많은 배포판들이 만들어졌고, 만들어지고 있다.
+
+- 이 중에서 가장 중요한 배포판은 두가지 이다.
+	- debian
+	- Red Hat
+- debian linux 는 커뮤니티용이기 때문에 무료
+- redhat linux 는 redhat 이라는 기업에서 만들었고 유료
+
+- debian 계열의 대표 배포판은 ubuntu 가 있다.
+- debian 에 비해 사용자 편의 기능이 더 많다.
+- linux 에서는 최초로 Windows 처럼 UI 를 제공했다.
+
+- IBM 인수 전 redhat 에서 linux 배포판이 만들어지는 순서
+	1. fedora linux 
+		- 새로운 기능을 개발하는 배포판. 무료
+	2. Red Hat Enterprise Linux (RHEL, 렐)
+		- 새로운 기능이 안정화 되면 이름을 위와 같이 바꿔서 릴리즈
+		- 기업들이 이걸 설치하면 유지보수 비용을 내야함. 유료
+	3. CentOS
+		- RHEL 을 복사해서 만
+		- RHEL 과 똑같이 안정화 버전이지만 무료
+		- 그래서 유지보수를 직접 할 여력이 되는 기업이 쓴다.
+		- 개발비용을 낮추기 위해 개발환경까지는 CentOS 를 쓰고, 운영환경만 RHEL 을 쓰기도 한다.
+
+- 이렇게 기업에서는 redhat 계열을 많이 쓰고, 개인 학습용이나 클라우드에서는 ubuntu 를 많이 쓴다.
+
+- 하지만 이제 CentOS8 은 2021년 지원 종료, CentOS7 은 2024년 지원 종료된다.
+- 이유
+	1. 시장 점유율이 ubuntu 가 압도적
+		- ubuntu 47%
+		- CentOS 19%
+		- debian 17%
+		- RHEL 2% (기업 배포판 1위)
+	2. IBM 이 redhat 인수 후 전략 변경
+		- CentOS 의 점유율을 RHEL 로 당기려 함
+
+- IBM 인수 후 redhat 에서 linux 배포판이 만들어지는 순서
+	1. fedora linux
+		- 새로운 기능 개발하는 배포판. 무료
+	2. Centos Stream
+		- 새로 개발된 기능들을 테스트하는 배포판. 무료
+		- 이 배포판에서는 바이너리 호환성 보장이 안될 수 있다고 말함
+	3. Red Hat Enterprise Linux (RHEL, 렐)
+		- 새로운 기능이 안정하된 배포판. 유료
+
+- 따라서 기존에 CentOS 를 쓰던 기업들에게는 4가지 선택지가 있다.
+	1. RHEL 로 넘어간다.
+	2. CentOS 를 기술 지원해주는 기업의 도움을 받으며 그대로 CentOS 를 쓴다.
+	3. Ubuntu 와 같은 타 OS 로 마이그레이션 스크립트를 이용하여 넘어간다.
+	4. RHEL 를 복제하여 만드는 무료 배포판으로 넘어간다.
+		- 기존 CentOS 와 같이 무료 배포판을 만드는 프로젝트가 있다.
+		-  ex) rocky linux, alma linux 
+
+- 여기서는 4번을 선택해 rocky linux 로 실습을 한다.
+	- centOS 는 강사가 가장 잘쓰는 리눅스 배포판
+	- 따라서 가장 잘 쓸 수 있는 배포판을 이용하여 강의를 한다.
+	- rocky linux 를 선택한 이유는 훨씬 많이 사용되기 때문이다.
+		- [Google Trend](https://trends.google.com/trends/explore?date=today%205-y&q=rocky%20linux,alma%20linux&hl=en)
+		- Github Stars 와 forks 개수
+	
 
 
 
