update: 쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 쿠버네티스 제대로 시작하기 - 컨테이너 한방 정리

--- a/02. Work/일프로 강사가 일하는 방법.md
+++ b/02. Work/일프로 강사가 일하는 방법.md
@@ -96,3 +96,16 @@ tags:
 
 - 위와 같이 인프런 강사 경험을 거치며 동기부여와 성장도 할 수 있었다.
 
+# 그밖에....
+
+## 새로운 오픈소스를 선택하는 방법
+
+> [!tip]
+> 객관적인 지표를 참고한다.
+
+- [Google Trends](https://trends.google.com/trends/)
+- Github Stars 와 Forks 의 개수
+
+- 이렇게 객관적인 지표로 오픈소스를 고르지 않고, 당장 필요한 기능이 있다고 잘 사용되지 않는 오픈소스를 고르면 기본적으로 동작해야 하는 기능들이 제대로 되지 않아 고생할 수 있다.
+
+
