update: 쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 쿠버네티스 제대로 시작하기 - 컨테이너 한방 정리

--- a/01. Development/02. Lecture/쿠버네티스 어나더 클래스 (지상편)/컨테이너 한방 정리.md
+++ b/01. Development/02. Lecture/쿠버네티스 어나더 클래스 (지상편)/컨테이너 한방 정리.md
@@ -81,6 +81,22 @@ tags:
 		- [Google Trend](https://trends.google.com/trends/explore?date=today%205-y&q=rocky%20linux,alma%20linux&hl=en)
 		- Github Stars 와 forks 개수
 	
+# Container
+
+![[쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 섹션 1 - 그림 3.png]]
+
+- 리눅스는 발전하면서 많은 코어 기술을 개발했다.
+- 그중 하나는 격리 기술이다.
+	- chroot : 유저, 파일, 네트워크 격리
+	- cgroup : App 마다 cpu, memory 를 할당
+	- namespace : 프로세스를 격리시켜주는 기술
+- 이런 기술들이 쌓이며 각각의 App 을 독립적인 환경에서 실행시킬 수 있게 되었다.
+
+- 이런 기술들을 집약하여 최초의 컨테이너인 LXC(Linux Container)가 만들어졌다.
+- 그리고 이 기술을 기반으로 Docker 가 만들어졌다.
+	- LXC 에 비해 쓰기 쉽다는 것이 장점
+
+
 
 
 
