update: 쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 쿠버네티스 제대로 시작하기 - 컨테이너 한방 정리

--- a/01. Development/02. Lecture/쿠버네티스 어나더 클래스 (지상편)/컨테이너 한방 정리.md
+++ b/01. Development/02. Lecture/쿠버네티스 어나더 클래스 (지상편)/컨테이너 한방 정리.md
@@ -96,7 +96,38 @@ tags:
 - 그리고 이 기술을 기반으로 Docker 가 만들어졌다.
 	- LXC 에 비해 쓰기 쉽다는 것이 장점
 
+- Docker 가 나온 후 rkt 라는 보안이 강화된 컨테이너가 만들어졌다.
+- 처음에 Docker 는 root 권한으로 설치 및 실행해야 했는데 그걸 보완하였었다.
+- 하지만 현재는 rootless 설치모드가 생겨서 보안이 강화되었다.
 
+- (rkt 의 태생을 보면) linux 의 여러 배포판 중에 컨테이너 전용 linux 인 Core OS 가 있고 rkt 는 이 OS 에 대한 대표 런타임이었다.
+- 그런데 이 OS 가 redhat 으로 인수되면서 fedora coreOS 로 이름이 바뀌었다.
+- 그런데 redhat 이 밀고 있는 컨테이너가 cri-o(크라이오)기 때문에 rkt 의 입지가 점점 줄어들고 있다.
+
+# Container Orchestration
+
+## Container Orchestration 이 가지는 장점
+
+### Container 만으로 배포하는 과정
+
+![[쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 섹션 1 - 그림 4.png]]
+
+- 위 과정을 사용자가 차레대로 전부 해야한다.
+
+### Container Orchestration 으로 배포하는 과정
+
+![[쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 섹션 1 - 그림 5.png]]
+
+- 사용자는 단 한번 지시만 하면 된다.
+
+## Container Orchestration 의 히스토리
+
+
+
+
+- Docker 가 나온 이후 kubernetes 를 비롯한 다양한 Container Orchestration 이 쏟아져나왔다.
+- 이 제품들 간에 개념, 용어, 기술이 서로 다 다르다.
+- 
 
 
 
